--- a/style.css
+++ b/style.css
@@ -1,53 +1,18 @@
 html {
-  background-color: #f0ecc6;
   color: black;
+  font-family: poppins;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
-#banner {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  padding: 5px;
-  color: #ffffff;
-  background-color: #ffffff;
-  background-image: url(images.jpg);
-  border: 4px solid #f6f7f4;
-  margin-left: 26%;
-  text-align: center;
-}
-#left {
-  background-color: #6b7d57;
-  color: white;
-  width: 25%;
-  top: 0px;
-  height: 100%;
-  position: fixed;
-}
-#main {
-  background-color: #f0ecc6;
-
-  height: auto;
-  margin-top: 5px;
-  margin-left: 26%;
-  position: static;
-  text-align: center;
-}
-
-input[type="button"] {
-  background-color: #6b7d57;
-  width: 60%;
-  border: none;
-  color: white;
-  padding: 13px 20px;
-  font-size: 17px;
-  margin: 4px 2px;
-  cursor: pointer;
+a {
+  text-decoration: none;
+  color: black;
 }
 h3 {
   text-align: center;
 }
-h4 {
-  font-size: 18px;
-}
+
 h5 {
   font-size: 18px;
   text-decoration: none;
@@ -55,12 +20,175 @@ h5 {
 ul {
   list-style-type: square;
 }
+
+#banner {
+  border: 1px solid #b7b9b2;
+}
+#text_banner {
+  text-align: center;
+}
+#text_banner_tittle {
+  font-size: 30px;
+  font-style: italic;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 40px;
+  background-color: #b7b9b2;
+}
+.menu_list {
+  display: flex;
+  justify-content: space-around;
+
+  width: 60%;
+}
+.menu_list a {
+  color: #f2f3f1;
+  padding: 12px;
+  text-decoration: none;
+  letter-spacing: 2x;
+  font-weight: bold;
+  font-size: 16px;
+}
+.menu_list a:hover {
+  background-color: #53831cec;
+  cursor: pointer;
+}
+.menu_list li {
+  list-style: none;
+}
+.logo {
+  display: none;
+}
+.logo div {
+  width: 25px;
+  height: 5px;
+  background-color: #ebece6;
+  margin: 3px;
+}
+
+@media screen and (mac-width: 1024px) {
+  .menu_list {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  .menu_list {
+    position: absolute;
+    right: 5px;
+    height: 92vh;
+    top: 20.8vh;
+    background-color: #53831cbb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .menu_list li {
+    opacity: 0;
+  }
+  .logo {
+    display: block;
+    cursor: pointer;
+  }
+}
+.menu_list_active {
+  transform: translateX(0%);
+}
+@keyframes menu_listFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+#text {
+  font-size: 18px;
+}
+#main {
+  z-index: 1;
+  padding-top: 20px;
+  padding-bottom: 3px;
+  height: auto;
+
+  text-align: center;
+  background-color: rgba(241, 241, 241, 0.945);
+}
+#main_text {
+  font-size: 25px;
+  text-align: center;
+  text-shadow: 5px 10px 7px rgba(66, 121, 34, 0.808);
+}
+#main_info {
+  height: auto;
+}
+#main_info_rule {
+  font-style: italic;
+}
+#main_box_input {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 70%;
+  margin-left: 15%;
+  border: 1px solid #b7b9b2;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: -15px 14px 10px 5px rgba(14, 14, 22, 0.137);
+}
+.choose {
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 5%;
+}
+.main_choose {
+  border: 3px solid #e8e9e5;
+  padding: 5px;
+}
+#rental_price {
+  padding-top: 1px;
+  background-color: rgba(241, 241, 241, 0.945);
+}
+#rental_price_items {
+  display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
+}
+#rental_price_item {
+  border: 3px solid #e8e9e5;
+  border-radius: 10px;
+  font-size: 18px;
+  text-align: center;
+  box-shadow: 0px 0px 10px 3px rgba(4, 71, 2, 0.473);
+  background-color: white;
+}
+input[type="button"] {
+  background-color: #53831c88;
+  width: 60%;
+  border: none;
+  color: white;
+  padding: 13px 20px;
+  font-size: 17px;
+  margin: 10px 2px;
+  cursor: pointer;
+  margin-bottom: 18px;
+}
 input[type="number"] {
   width: 60%;
   padding: 15px 18px;
   margin: 8px;
   display: inline-block;
-  border: 4px solid #f6f7f4;
+  border: 4px solid #e8e9e5;
   box-sizing: border-box;
   font-size: 17px;
 }
@@ -69,16 +197,15 @@ input[type="date"] {
   padding: 12px 17px;
   margin: 8px;
   display: inline-block;
-  border: 4px solid #f6f7f4;
+  border: 4px solid #e8e9e5;
   box-sizing: border-box;
   font-size: 17px;
+  cursor: pointer;
 }
 select {
   width: 35%;
   padding: 15px 20px;
   font-size: 17px;
-  border: 4px solid #f6f7f4;
-}
-.choose {
-  font-size: 20px;
+  cursor: pointer;
+  border: 4px solid #e8e9e5;
 }
