--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav {
   margin: 3px;
 }
 
-@media screen and (mac-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .menu_list {
     width: 60%;
   }
@@ -79,6 +79,41 @@ nav {
   body {
     overflow-x: hidden;
   }
+  .menu_list {
+    position: absolute;
+    right: 5px;
+    height: 92vh;
+    top: 20.8vh;
+    background-color: #53831cbb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .menu_list li {
+    opacity: 0;
+  }
+  .logo {
+    display: block;
+    cursor: pointer;
+  }
+}
+.menu_list_active {
+  transform: translateX(0%);
+}
+@keyframes menu_listFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+    overflow-x: hidden;
   .menu_list {
     position: absolute;
     right: 5px;
