--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ nav {
 .menu_list {
   display: flex;
   justify-content: space-around;
-
   width: 60%;
 }
 .menu_list a {
@@ -82,8 +81,8 @@ nav {
   .menu_list {
     position: absolute;
     right: 5px;
-    height: 92vh;
-    top: 20.8vh;
+    height: 100%;
+    top: 21%;
     background-color: #53831cbb;
     display: flex;
     flex-direction: column;
@@ -113,20 +112,21 @@ nav {
     transform: translateY(0px);
   }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   body {
     overflow-x: hidden;
+    font-size: 5%;
   }
   .menu_list {
     position: absolute;
-    right: 5px;
-    height: 92vh;
-    top: 20.8vh;
+    right: 0px;
+    height: 100%;
+    top: 21%;
     background-color: #53831cbb;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 35%;
+    width: 100%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
